--- a/knowledge_base_front/pubspec.yaml
+++ b/knowledge_base_front/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   http: ^1.2.2
   dio: ^5.6.0
   flutter_bloc: ^8.1.6
+  shared_preferences:
+  flutter_quill: ^9.3.6
 
 dev_dependencies:
   flutter_test:
