--- a/knowledge_base_front/pubspec.yaml
+++ b/knowledge_base_front/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   shared_preferences:
   flutter_quill: ^9.3.6
+  go_router: ^14.6.2
 
 dev_dependencies:
   flutter_test:
